# cod-api

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  upload.sh
.github/workflows/: cod-api-AutoDeployTrigger-b0e5a105-bf31-4ff2-b56e-ca656f56b71f.yml  cod-api-AutoDeployTrigger-d25d59ca-ebdf-47f8-b699-753b13d7daa8.yml
api/routers/: features.py  tiles.py
app/: __init__.py  __main__.py  config.py  gdal.py  level_0.py  level_1.py  level_2.py  stac.py  utils.py
app/routers/: features.py  tiles.py
inputs/: fix.json  fixes.json  level_1.json
stac/: catalog.json
stac-remote/: catalog.json
stac-remote/cod-ab-1/: collection.json
stac-remote/cod-ab-1/abw_adm0/: abw_adm0.json
stac-remote/cod-ab-1/afg_adm0/: afg_adm0.json
stac-remote/cod-ab-1/afg_adm1/: afg_adm1.json
stac-remote/cod-ab-1/afg_adm2/: afg_adm2.json
stac-remote/cod-ab-1/ago_adm0/: ago_adm0.json
stac-remote/cod-ab-1/ago_adm1/: ago_adm1.json
stac-remote/cod-ab-1/ago_adm2/: ago_adm2.json
stac-remote/cod-ab-1/ago_adm3/: ago_adm3.json
stac-remote/cod-ab-1/aia_adm0/: aia_adm0.json
stac-remote/cod-ab-1/alb_adm0/: alb_adm0.json
stac-remote/cod-ab-1/alb_adm1/: alb_adm1.json
stac-remote/cod-ab-1/alb_adm2/: alb_adm2.json
stac-remote/cod-ab-1/alb_adm3/: alb_adm3.json
stac-remote/cod-ab-1/are_adm0/: are_adm0.json
stac-remote/cod-ab-1/are_adm1/: are_adm1.json
stac-remote/cod-ab-1/arg_adm0/: arg_adm0.json
stac-remote/cod-ab-1/arg_adm1/: arg_adm1.json
stac-remote/cod-ab-1/arg_adm2/: arg_adm2.json
stac-remote/cod-ab-1/arm_adm0/: arm_adm0.json
stac-remote/cod-ab-1/arm_adm1/: arm_adm1.json
stac-remote/cod-ab-1/arm_adm2/: arm_adm2.json
stac-remote/cod-ab-1/atg_adm0/: atg_adm0.json
stac-remote/cod-ab-1/atg_adm1/: atg_adm1.json
stac-remote/cod-ab-1/aze_adm0/: aze_adm0.json
stac-remote/cod-ab-1/aze_adm1/: aze_adm1.json
stac-remote/cod-ab-1/bdi_adm0/: bdi_adm0.json
stac-remote/cod-ab-1/bdi_adm1/: bdi_adm1.json
stac-remote/cod-ab-1/bdi_adm2/: bdi_adm2.json
stac-remote/cod-ab-1/ben_adm0/: ben_adm0.json
stac-remote/cod-ab-1/ben_adm1/: ben_adm1.json
stac-remote/cod-ab-1/ben_adm2/: ben_adm2.json
stac/cod-ab-1/: collection.json
(+1035 files in other folders)
