[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["maxmalynowsky"]
description = ""
name = "cod-api"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
geopandas = "^1.0.1"
kaleido = "0.2.1"
plotly = "^5.24.1"
pyarrow = "^18.1.0"
pystac = "^1.11.0"
python = "^3.13.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[tool.ruff]
fix = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "INP", "S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"
