[project]
name = "cod-api"
version = "0.1.0"
description = "API for COD-AB"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = ["fastapi", "geopandas", "pyarrow", "pycountry", "tqdm"]

[dependency-groups]
dev = ["ruff", "taskipy"]

[tool.taskipy.tasks]
export = "uv export -o requirements.txt --no-hashes"
ruff = "ruff format && ruff check && ruff format"

[tool.ruff]
fix = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "INP", "S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"
